# toy_mlir

./: CMakeLists.txt  setup.sh  toy1.toy  toy2.toy
include/toy/: AST.h  CMakeLists.txt  Dialect2.h  MLIRGen2.h  Ops.td  Ops2.td  Parser.h
src/: CMakeLists.txt  toyc.cpp
src/mlir/: Dialect2.cpp  LowerToLLVM.cpp  MLIRGen.cpp  MLIRGen2.cpp
src/parser/: AST.cpp
